--- a/FrancePhotography.html
+++ b/FrancePhotography.html
@@ -21,7 +21,7 @@ French Photography
 	
 	<ul>
 		<li><a class="navbar" href="HomePage.html" style="color:black"> Home Page </a></li>
-		<li><a class="navbar" href="France.html" style="color:black"> France </a></li>
+		<li><a class="navbar" href="index.html" style="color:black"> France </a></li>
 		<li><a class="navbar" href="Italy.html" style="color:black"> Italy </a></li>
 		<li><a class="navbar" href="Spain.html" style="color:black"> Spain </a></li>
 		<li><a class="navbar" href="England.html" style="color:black"> England </a></li>
