--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ France
 	
 	<ul>
 		<li><a class="navbar" href="HomePage.html"> Home Page </a></li>
-		<li><a class="navbar" href="France.html"> France </a></li>
+		<li><a class="navbar" href="index.html"> France </a></li>
 		<li><a class="navbar" href="Italy.html"> Italy </a></li>
 		<li><a class="navbar" href="Spain.html"> Spain </a></li>
 		<li><a class="navbar" href="England.html"> England </a></li>
